--- a/tex/graphics/4-outlier-bopt.tex
+++ b/tex/graphics/4-outlier-bopt.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.3.1 on 2021-12-08 18:07:30
+% Created by tikzDevice version 0.12.3.1 on 2021-12-14 20:20:29
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
@@ -131,9 +131,9 @@
 \begin{scope}
 \definecolor{drawColor}{gray}{0.30}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 56.11, 23.32) {digits3};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 56.11, 23.32) {Digits3};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 85.36, 23.32) {spirals};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 85.36, 23.32) {Spirals};
 \end{scope}
 \begin{scope}
 \definecolor{drawColor}{RGB}{0,0,0}
