--- a/tex/references.bib
+++ b/tex/references.bib
@@ -76,6 +76,14 @@
     publisher={Cambridge University Press}, 
     pages={428–430}
 }
+@Article{Picinbono1996,
+  author = {Picinbono, B.},
+  title = {Second-Order Complex Random Vectors and Normal Distributions},
+  year = {1996},
+  journal = {IEEE Transactions on Signal Processing},
+  volume = {44},
+  pages = {2637-2640}
+}
 @Inbook{PouplierEtAl2014,
   author = {Pouplier, M. and Hoole, P. and Cederbaum, J. and Greven, S. and Pastätter, M.}, 
   title = {Perceptual and articulatory factors in German fricative assimilation},
