--- a/tex/sections/3-estimation.tex
+++ b/tex/sections/3-estimation.tex
@@ -277,5 +277,5 @@ Given a fully observed smooth mean function $\hat\mu_q^{(k)}$ we can then calcul
 An alternative approach is discussed in \cref{app:a-smooth}.
 There, instead of treating the SRV curves as piece-wise-constant, they are smoothed in the mean basis $\widetilde q^{(k)} \approx b(s)^\top \hat\theta_i^{(k)}$, where the coefficient vector $\hat\theta_i^{(k)}$ is estimated in way that penalises deviations from the mean covariance-structure.
 The scalar product is then given by $\langle \widetilde q_i^{(k)}, \hat\mu_q^{(k)} \rangle \approx (\hat\theta_i^{(k)})^H G \hat\theta^{(k)}$.
-While this method succeeds in estimating very natural looking smooth SRV curves, their integral is not guaranteed to go through the observed points on data curve level.
-Because of these and other theoretical concerns this approach did not end up getting used in this thesis
+While this method succeeds in estimating very natural looking smooth SRV curves (see \cref{fig:a-smooth}), their integral is not guaranteed to go through the observed points on data curve level.
+Because of these and other theoretical concerns this approach did not end up getting used in this thesis.
